tests/nad_test_16/np.yaml
# np default ingress deny in default ns
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-egress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
